assets/css/style.scss
---
---

@import "{{ site.theme }}";

/* These are the colors used to render your Markdown into HTML. Customize them however you want! */

:root { /* Default colors taken directly from GitHub Pages' Primer theme */
  --page-background-color: rgb(255, 255, 255); /* white */
  --text-color: rgb(36, 41, 46); /* very dark gray */
  --link-color: rgb(3, 102, 214); /* deep blue */
  --horizontal-line-color: rgb(225, 228, 232); /* medium gray */
  --code-block-background-color: rgb(246, 248, 250); /* light gray */
  --inline-code-background-color: rgba(27, 31, 35, 0.05); /* very dark gray but with alpha, results in light gray */
  --block-quote-text-color: rgb(106, 115, 125); /* dark gray */
  --block-quote-left-bar-color: rgb(223, 226, 229); /* medium light gray */
  --table-border-color: rgb(223, 226, 229); /* medium light gray */
  --table-primary-background-color: rgb(255, 255, 255); /* white */
  --table-secondary-background-color: rgb(246, 248, 250); /* extremely light gray */
}

@media (prefers-color-scheme: dark) { /* Dark mode colors */
    :root {
      --page-background-color: rgb(26, 26, 26); /* very dark gray */
      --text-color: rgb(255, 255, 255); /* white */
      --link-color: rgb(204, 230, 255); /* very light blue */
      --horizontal-line-color: rgb(102, 102, 102); /* medium dark gray */
      --code-block-background-color: rgb(38, 38, 38); /* dark gray */
      --inline-code-background-color: rgb(38, 38, 38); /* dark gray */
      --block-quote-text-color: rgb(191, 191, 191); /* medium light gray */
      --block-quote-left-bar-color: rgb(51, 51, 51); /* darker gray */
      --table-border-color: rgb(80, 89, 98); /* medium gray */
      --table-primary-background-color: rgb(26, 26, 26); /* very dark gray */
      --table-secondary-background-color: rgb(51, 51, 51); /* dark gray */
  }
}

body {
  color: var(--text-color);
  background-color: var(--page-background-color);
}

.highlight {
  background-color: transparent;
}

.markdown-body {
  
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    color: var(--text-color);
  }
  
  p {
    color: var(--text-color);
  }
  
  a {
    color: var(--link-color);
  }
  
  hr {
    background-color: var(--horizontal-line-color);
  }
  
  code,
  tt {
    color: var(--text-color);
    background-color: var(--inline-code-background-color);
  }
  
  .highlight pre,
  pre {
    background-color: var(--code-block-background-color);
  }
  
  pre {
    > code {
      color: var(--text-color);
    }
  }
  
  blockquote {
    border-left: var(--block-quote-left-bar-color);
    color: --block-quote-text-color;
  }
  
  table {
    
    th,
    td {
      border: 1px solid var(--table-border-color);
    }
    
    tr {
      background-color: var(--table-primary-background-color);
      border-top: 1px solid var(--table-border-color);
      
      &:nth-child(2n) {
        background-color: var(--table-secondary-background-color);
      }
    }
    
  }
  
}

